--- a/main.css
+++ b/main.css
@@ -11,3 +11,21 @@ body {
 canvas {
     background-color: white;
 }
+
+@media only screen and (max-width: 720px) {
+    canvas {
+        width: 100%;
+    }
+    h1 {
+        display: none;
+    }
+}
+
+@media only screen and (max-height: 480px) {
+    canvas {
+        height: 100vh;
+    }
+    h1 {
+        display: none;
+    }
+}
