--- a/main.css
+++ b/main.css
@@ -12,6 +12,14 @@ canvas {
     background-color: white;
 }
 
+/* #startButton {
+    position: absolute;
+    width: 150px;
+    height: 60px;
+    left: 900;
+    top : 800;
+} */
+
 @media only screen and (max-width: 720px) {
     canvas {
         width: 100%;
