--- a/main.css
+++ b/main.css
@@ -6,19 +6,62 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-image: url('img/3. Background/page_background.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: cover;
+    font-family: 'Shantell Sans';
+}
+
+h1 {
+    font-size: 60px;
+    margin-top: 0;
+    color: #531A82;
+    box-shadow: 0px 0px 50px 50px rgba(255,255,255,0.7);
+    background-color: rgba(255,255,255,0.7);
+    border-radius: 64px;
 }
 
 canvas {
     background-color: white;
+} 
+
+.instructions-container {
+    margin: 16px;
 }
 
-/* #startButton {
-    position: absolute;
-    width: 150px;
-    height: 60px;
-    left: 900;
-    top : 800;
-} */
+.arrow-keys-container {
+    display: flex;
+}
+
+.arrow-keys {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.other-arrows {
+    display: flex;
+}
+
+.arrow-outer-line {
+    background-color: white;
+    margin: 2px;
+    width: 40px;
+    height: 40px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.arrow-inner-line {
+    background-color: #7FFFE0;
+    width: 32px;
+    height: 32px;
+    border-radius: 8px;
+}
 
 @media only screen and (max-width: 720px) {
     canvas {
