--- a/main.css
+++ b/main.css
@@ -15,11 +15,24 @@ body {
 
 h1 {
     font-size: 60px;
-    margin-top: 0;
     color: #531A82;
     box-shadow: 0px 0px 50px 50px rgba(255,255,255,0.7);
     background-color: rgba(255,255,255,0.7);
     border-radius: 64px;
+}
+
+h2 {
+    font-size: 32px;
+    font-weight: 700;
+    color: #7FFFE0;
+    margin: 0;
+}
+
+h3 {
+    font-size: 20px;
+    font-weight: 900;
+    color: #531A82;
+    margin: 0;
 }
 
 canvas {
@@ -28,10 +41,15 @@ canvas {
 
 .instructions-container {
     margin: 16px;
+    background-color: rgba(0,0,0,0.4);
+    border-radius: 16px;
 }
 
 .arrow-keys-container {
     display: flex;
+    align-items: center;
+    gap: 16px;
+    margin: 6px;
 }
 
 .arrow-keys {
@@ -45,7 +63,7 @@ canvas {
     display: flex;
 }
 
-.arrow-outer-line {
+.outer-line {
     background-color: white;
     margin: 2px;
     width: 40px;
@@ -56,11 +74,79 @@ canvas {
     align-items: center;
 }
 
-.arrow-inner-line {
+.inner-line {
     background-color: #7FFFE0;
     width: 32px;
     height: 32px;
     border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.triangle-left {
+    transform: rotate(270deg);
+}
+
+.triangle-down {
+    transform: rotate(180deg);
+}
+
+.triangle-right {
+    transform: rotate(90deg);
+}
+
+.attack-keys-container {
+    display: flex;
+    flex-direction: column;
+    margin: 6px;
+    gap: 6px;
+}
+
+.space-key-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 16px;
+}
+
+.space-outer-line {
+    background-color: white;
+    margin: 2px;
+    width: 128px;
+    height: 40px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.space-inner-line {
+    background-color: #7FFFE0;
+    width: 120px;
+    height: 32px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.d-key-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 16px;
+}
+
+.key {
+    margin: 0 44px;
+}
+
+.f-key-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 16px;
 }
 
 @media only screen and (max-width: 720px) {
