--- a/main.css
+++ b/main.css
@@ -142,7 +142,7 @@ canvas {
     margin: 0 44px;
 }
 
-.f-key-container {
+.s-key-container {
     display: flex;
     align-items: center;
     justify-content: flex-start;
