--- a/main.css
+++ b/main.css
@@ -19,6 +19,8 @@ h1 {
     box-shadow: 0px 0px 50px 50px rgba(255,255,255,0.7);
     background-color: rgba(255,255,255,0.7);
     border-radius: 64px;
+    position: fixed;
+    top: 5%;
 }
 
 h2 {
@@ -36,7 +38,6 @@ h3 {
 }
 
 canvas {
-    background-color: white;
     display: block;
 } 
 
@@ -44,6 +45,8 @@ canvas {
     margin: 16px;
     background-color: rgba(0,0,0,0.4);
     border-radius: 16px;
+    position: fixed;
+    bottom: 3%;
 }
 
 .arrow-keys-container {
@@ -194,6 +197,30 @@ img {
     display: none;
 }
 
+@media only screen and (max-height: 1079px) {
+    .instructions-container {
+        bottom: 0%;
+    }
+}
+
+@media only screen and (max-height: 1079px) {
+    .instructions-container {
+        display: none;
+    }
+}
+
+@media only screen and (max-height: 900px) {
+    h1 {
+        top: 0%;
+    }
+}
+
+@media only screen and (max-height: 900px) {
+    h1 {
+        display: none;
+    }
+}
+
 @media only screen and (max-width: 720px) {
     canvas {
         width: 100%;
@@ -215,5 +242,19 @@ img {
     }
     .instructions-container {
         display: none;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    img {
+        width: 60px;
+        height: 60px;
+    }
+}
+
+@media only screen and (max-width: 390px) {
+    img {
+        width: 48px;
+        height: 48px;
     }
 }
