--- a/main.css
+++ b/main.css
@@ -13,6 +13,17 @@ body {
     font-family: 'Shantell Sans';
 }
 
+main:fullscreen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main:fullscreen canvas {
+    width: 100%;
+    height: 100%;
+}
+
 h1 {
     font-size: 60px;
     color: #531A82;
@@ -195,6 +206,15 @@ img {
 
 .d-none {
     display: none;
+}
+
+.start-button {
+    cursor: pointer;
+    width: 20.8%;
+    height: 12.5%;
+    position: absolute;
+    left: 58%;
+    top: 82%;
 }
 
 @media only screen and (max-height: 1079px) {
